# statismo

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  ReadMe.md  intro.dox  statismo-config.cmake  statismo-config.cmake.in  statismoConfig.cmake.in  statismoConfigVersion.cmake.in
Examples/ITK/: CMakeLists.txt  README  buildDeformationModel.cpp  buildGaussianProcessDeformationModel.cpp  buildImageIntensityModelOnROI.cpp  buildShapeModel.cpp  buildShapeModel_75pcvar.cpp  deformationModelFitting.cpp  fitting.cpp  itkBuildDeformationModel.cpp  itkBuildImageIntensityModelOnROI.cpp  itkExample.cpp  landmarkConstrainedShapeModelFitting.cpp  lowRankGaussianProcessImageToImageRegistration.cpp  runITKExamples.sh  shapeModelFitting.cpp  simpleGaussianProcessImageToImageRegistration.cpp
Examples/VTK/: BasicSamplingExample.cxx  BuildConditionalModelExample.cxx  BuildGaussianProcessShapeModelExample.cxx  BuildIntensityModelExample.cxx  BuildPartiallyFixedModelExample.cxx  BuildPosteriorModelExample.cxx  BuildShapeModelExample.cxx  CMakeLists.txt  CrossValidationExample.cxx  README  ReduceModelVarianceExample.cxx  buildVTKShapeModel.cxx  runVTKExamples.sh  vtkBasicSamplingExample.cxx  vtkBuildIntensityModelExample.cpp
Examples/VTK/FaceModel/: BuildFaceModel.cxx  CMakeLists.txt
Tests/: CMakeLists.txt  README  basicStatismoTest.cpp
Tests/modelBuilderTests/: CMakeLists.txt  PosteriorModelBuilder3DTest.cpp  PosteriorModelBuilderTest.cpp
Tests/representerTests/: CMakeLists.txt  genericRepresenterTest.hxx  itkImageRepresenterTest.cpp  itkMeshRepresenterTest.cpp  itkVectorImageRepresenterTest.cpp  vtkPolyDataRepresenterTest.cpp  vtkStandardImageRepresenterTest.cpp  vtkStandardMeshRepresenterTest.cpp  vtkStructuredPointsRepresenterTest.cpp
Tests/statismoTests/: TestDataManager.py  TestModelBuilders.py  TestStatisticalModel.py  runPythonTests.sh  statismoTestUtils.py
Wrapping/ITK/: CMakeLists.txt  wrap_AA_itkImageRepresenter.cmake  wrap_AA_itkVectorImageRepresenter.cmake  wrap_itkDataManager.cmake  wrap_itkDataManager.wrap  wrap_itkPCAModelBuilder.cmake  wrap_itkPCAModelBuilder.wrap  wrap_itkPartiallyFixedModelBuilder.cmake  wrap_itkPartiallyFixedModelBuilder.wrap  wrap_itkStatisticalModel.cmake  wrap_itkStatisticalModelTransform.cmake
Wrapping/SWIG/: CMakeLists.txt  Preprocessor.i  Representer.i  StatismoTypemaps.i  TrivialVectorialRepresenter.i  numpy.i  statismo.i  statismoTypemaps.i  vtkPolyDataRepresenter.i  vtkStructuredPointsRepresenter.i  vtkUnstructuredGridRepresenter.i
Wrapping/VTK/: CMakeLists.txt  vtkStandardMeshRepresenter.i  vtkStructuredPointsRepresenter.i
doc/: CMakeLists.txt  Design.xmi  README  TODO  install.txt
doc/Design/: Design.docbook  Design.html  xmi.css
doc/IJ/: InsightJournal.bib  README  statismo_ij.tex
doc/classdoc/: Doxyfile  Doxyfile.in
modules/ITK/: CMakeLists.txt
modules/ITK/cli/: CMakeLists.txt  statismo-build-deformation-model.cxx  statismo-build-deformation-model.md  statismo-build-gp-model-kernels.h  statismo-build-gp-model.cxx  statismo-build-gp-model.md  statismo-build-models-utils.h  statismo-build-shape-model.cxx  statismo-build-shape-model.md  statismo-fit-image.cxx  statismo-fit-image.md  statismo-fit-surface.cxx  statismo-fit-surface.md  statismo-posterior.cxx  statismo-posterior.md  statismo-reduce-model.cxx  statismo-reduce-model.md  statismo-sample.cxx  statismo-sample.md  statismo-warp-image.cxx  statismo-warp-image.md
modules/ITK/examples/: CMakeLists.txt  itkBuildDeformationModel.cxx  itkBuildGaussianProcessDeformationModel.cpp  itkBuildGaussianProcessDeformationModel.cxx  itkBuildShapeModel.cpp  itkBuildShapeModel.cxx  itkBuildShapeModel_75pcvar.cpp  itkBuildShapeModel_75pcvar.cxx  itkDeformationModelFitting.cxx  itkLandmarkConstrainedShapeModelFitting.cxx  itkLowRankGaussianProcessImageToImageRegistration.cxx  itkShapeModelFitting.cxx  itkSimpleGaussianProcessImageToImageRegistration.cpp  itkSimpleGaussianProcessImageToImageRegistration.cxx  runITKExamples.sh
modules/ITK/include/: itkConditionalModelBuilder.h  itkDataManager.h  itkDataManagerWithSurrogates.h  itkInterpolatingStatisticalDeformationModelTransform.h  itkLowRankGPModelBuilder.h  itkPCAModelBuilder.h  itkPixelConversionTraits.h  itkPointTraits.h  itkPosteriorModelBuilder.h  itkReducedVarianceModelBuilder.h  itkStandardImageRepresenter.h  itkStandardImageRepresenter.hxx  itkStandardImageRepresenter.txx  itkStandardImageRepresenterTraits.h  itkStandardMeshRepresenter.h  itkStandardMeshRepresenter.hxx  itkStandardMeshRepresenter.txx  itkStatismoIO.h  itkStatisticalDeformationModelTransform.h  itkStatisticalModel.h  itkStatisticalModelTransformBase.h  itkStatisticalModelTransformBase.hxx  itkStatisticalShapeModelTransform.h  itkUtils.h  statismoITKConfig.h
modules/ITK/tests/: CMakeLists.txt  itkStandardImageRepresenterTest.cpp  itkStandardImageRepresenterTest.cxx  itkStandardMeshRepresenterTest.cpp  itkStandardMeshRepresenterTest.cxx
modules/ITK/wrapping/: CMakeLists.txt  wrap_AA_itkImageRepresenter.wrap  wrap_AA_itkMeshRepresenter.wrap  wrap_AA_itkVectorImageRepresenter.wrap  wrap_itkConditionalModelBuilder.wrap  wrap_itkDataManager.wrap  wrap_itkPCAModelBuilder.wrap  wrap_itkPartiallyFixedModelBuilder.wrap  wrap_itkPosteriorModelBuilder.wrap  wrap_itkStatisticalModel.wrap  wrap_itkStatisticalModelTransform.wrap
modules/VTK/: CMakeLists.txt
modules/VTK/examples/: CMakeLists.txt  README  runVTKExamples.sh  vtkBasicSamplingExample.cxx  vtkBuildConditionalModelExample.cpp  vtkBuildConditionalModelExample.cxx  (+8 more)
modules/core/: CMakeLists.txt
statismo_elastix/: CMakeLists.txt  elxStatisticalDeformationModelTransform.cxx  elxStatisticalDeformationModelTransform.h  elxStatisticalDeformationModelTransform.hxx  itkAdvancedStatisticalDeformationModelTransform.h  itkAdvancedStatisticalModelTransformBase.h  itkAdvancedStatisticalModelTransformBase.txx
superbuild/: CMakeLists.txt  External-Boost.cmake  External-Eigen.cmake  External-HDF5.cmake  External-ITK.cmake  External-VTK.cmake  normalize_hdf5_lib_names.cmake
(+434 files in other folders)
